# P7-Evnt-Rg

./: .gitignore  Dockerfile  README.md  Template+de+rapport+technique (1).docx  docker-compose.yaml  puls-events-rag-slides.pptx  pyproject.toml  pytest.ini  ~$mplate+de+rapport+technique (1).docx
scripts/: run_api.sh
src/: config.py  openagenda_client.py  streamlit.py  utils.py
src/api/: app.py
src/scripts/: build_index.py  clean_data.py  evaluate_rag.py  fetch_data.py  query_rag.py  ragas_ollama_demo.py
tests/: conftest.py  dataset.jsonl  ragas_report_demo.csv  test_answer_pipeline.py  test_api.py  test_api_smoke.py  test_index.py  test_settings_smoke.py
